[package]
name = "libhammer2"
version = "0.2.1"
edition = "2021"

[dependencies]
icrc32 = { git = "https://github.com/kusumi/icrc32" }
libc = "0.2.167"
log = "0.4.22"
nix = { version = "0.29.0", features = ["ioctl"] }
sha2 = "0.10.8"
terminal_size = "0.4.0"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }

[dev-dependencies]
env_logger = "0.11.5"
hex = "0.4.3"
